Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================== Lucene 9.8.0 =======================

API Changes
---------------------

* GITHUB#11248: IntBlockPool's SliceReader, SliceWriter, and all int slice functionality are moved out to MemoryIndex.
  (Stefan Vodita)

New Features
---------------------

* GITHUB#12383: Introduced LeafCollector#finish, a hook that runs after
  collection has finished running on a leaf. (Adrien Grand)

* LUCENE-8183, GITHUB#9231: Added the abbility to get noSubMatches and noOverlappingMatches in
  HyphenationCompoundWordFilter (Martin Demberger, original from Rupert Westenthaler)

Improvements
---------------------
* GITHUB#12374: Add CachingLeafSlicesSupplier to compute the LeafSlices for concurrent segment search (Sorabh Hamirwasia)

Optimizations
---------------------

* GITHUB#12377: Avoid redundant loop for compute min value in DirectMonotonicWriter. (Chao Zhang)

* GITHUB#12361: Faster top-level disjunctions sorted by descending score.
  (Adrien Grand)

* GITHUB#12444: Faster top-level disjunctions sorted by descending score in
  case of many terms or queries that expose suboptimal score upper bounds.
  (Adrien Grand)

* GITHUB#12383: Assign a dummy simScorer in TermsWeight if score is not needed. (Sagar Upadhyaya)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12385: Restore parallel knn query rewrite across segments rather than slices (Luca Cavanna)

* GITHUB#12381: Speed up NumericDocValuesWriter with index sorting. (Chao Zhang)

* GITHUB#12453: Faster bulk numeric reads from BufferedIndexInput (Armin Braun)

Bug Fixes
---------------------

* GITHUB#9660: Throw an ArithmeticException when the offset overflows in a ByteBlockPool. (Stefan Vodita)

* GITHUB#12388: JoinUtil queries were ignoring boosts. (Alan Woodward)
