@@ -46,10 +46,6 @@ public class KnnByteVectorField extends Field {
     if (dimension == 0) {
       throw new IllegalArgumentException("cannot index an empty vector");
     }
-    if (dimension > ByteVectorValues.MAX_DIMENSIONS) {
-      throw new IllegalArgumentException(
-          "cannot index vectors with dimension greater than " + ByteVectorValues.MAX_DIMENSIONS);
-    }
     if (similarityFunction == null) {
       throw new IllegalArgumentException("similarity function must not be null");
     }
